// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaneContainerComponent test should be resize if notification console is expanded 1`] = `
<StyledPanelBase
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "516px",
    }
  }
  styles={
    {
      "commands": {
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "padding": 0,
      },
      "header": {
        "padding": "0 0 8px 34px",
      },
      "navigation": {
        "borderBottom": "1px solid #cccccc",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;

exports[`PaneContainerComponent test should not render console with panel 1`] = `
<StyledPanelBase
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "768px",
    }
  }
  styles={
    {
      "commands": {
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "padding": 0,
      },
      "header": {
        "padding": "0 0 8px 34px",
      },
      "navigation": {
        "borderBottom": "1px solid #cccccc",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;

exports[`PaneContainerComponent test should render nothing if content is undefined 1`] = `<Fragment />`;

exports[`PaneContainerComponent test should render with panel content and header 1`] = `
<StyledPanelBase
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "736px",
    }
  }
  styles={
    {
      "commands": {
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "padding": 0,
      },
      "header": {
        "padding": "0 0 8px 34px",
      },
      "navigation": {
        "borderBottom": "1px solid #cccccc",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;
